<resources>
    <string name="app_name">zigzag</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="header">ZigZag</string>
    <string name="play">Play</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
    <string name="enter_username">Enter Username</string>
    <string name="submit_score">Submit Score</string>
    <string name="game_info_text">Drag circle to start the game. Avoid the brown rectangles.</string>
</resources>